# WF.Player

./: .gitignore  .gitmodules  README.md  WF.Player.pot  WF.Player.sln  WF.Player.userprefs  gettrans.sh  settrans.sh
Components/: hockeyappandroid-3.0.2.info  hockeyappios-3.5.5.1.info  zxing.net.mobile-1.4.7.2.info
Components/hockeyappandroid-3.0.2/component/: GettingStarted.md  Manifest.xml
Components/hockeyappios-3.5.5.1/component/: Manifest.xml
Components/zxing.net.mobile-1.4.7.2/component/: Manifest.xml
Lua-5.1/: .travis.yml  CMakeLists.txt  README.md  lua_dll.rc
Lua-5.1/android_build/: HOWTO
Lua-5.1/android_build/jni/: Android.mk  Application.mk
Lua-5.1/include/: llimits.h  lnet.h  luaconf Kopie.h  luaconf.h  winphone8.h
Lua-5.1/ios_build/: Makefile  README.md
Lua-5.1/ios_build/Lua_iPhone.xcodeproj/: project.pbxproj
Lua-5.1/ios_build/Lua_iPhone.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Lua-5.1/ios_build/Lua_iPhone.xcodeproj/project.xcworkspace/xcuserdata/weltz.xcuserdatad/: UserInterfaceState.xcuserstate
Lua-5.1/ios_build/Lua_iPhone.xcodeproj/xcuserdata/weltz.xcuserdatad/xcschemes/: Lua_iPhone.xcscheme  xcschememanagement.plist
Lua-5.1/src/: Makefile  lbaselib.cpp  liolib.cpp  llex-android.cpp  lnet.cpp  loadlib.cpp  loslib.cpp  lstrlib.cpp  lua.rc  winphone8.cpp
Lua-5.1/wp8_build/lua/: lua.sln
Lua-5.1/wp8_build/lua/lua5.1/: interop.cpp  interop.h  lua5.1.vcxproj
Lua-5.1/wpsl8_build/lua/: lua.sln
Lua-5.1/wpsl8_build/lua/lua52/: interop.h  lua52.vcxproj
Translations/: de.po  de.pot  en.po  en.pot  fi.po  fr.po
WF.Player.Common/: IApp.cs  README.md  WF.Player.Common.projitems  WF.Player.Common.shproj
WF.Player.Common/Enums/: FormatCoordinates.cs  UnitLength.cs
WF.Player.Common/Services/Geolocation/: Position.cs  PositionExtensions.cs
WF.Player.Droid/: AndroidApp.cs  MainActivity.cs  MainApplication.cs  Splash.cs  WF.Player.Droid.csproj  packages.config
WF.Player.Droid/Bootstrap/: BarCodeServiceBootstrap.cs
WF.Player.Droid/Preferences/: EditFloatPreference.cs  EditIntPreference.cs  FloatListPreference.cs  IntListPreference.cs  PreferencesActivity.cs
WF.Player.Droid/Properties/: AndroidManifest.xml  AssemblyInfo.cs
WF.Player.Droid/Renderer/: BadgeImageRenderer.cs  BasePageRenderer.cs  CustomButtonRenderer.cs  CustomNavigationPageRenderer.cs  CustomNavigationRenderer.cs  CustomWebViewRenderer.cs  DirectionArrowRenderer.cs  ExtendedButtonRenderer.cs  ExtendedLabelRenderer.cs  ExtendedMapRenderer.cs  ExtendedNavigationPageRenderer.cs  GameToolBarButtonRenderer.cs
WF.Player.Droid/Resources/: Resource.designer.cs
WF.Player.Droid/Resources/drawable/: IconEmpty.pn_  SplashScaled.xml
WF.Player.Droid/Resources/layout/: PreferencesView.axml
WF.Player.Droid/Resources/values-de/: strings.xml  vernacular_strings.xml
WF.Player.Droid/Resources/values-en/: strings.xml  (+1 more)
WF.Player.Forms/: App.cs  TranslateExtension.cs  WF.Player.Forms.projitems  WF.Player.Forms.shproj
WF.Player.Forms/Cartridges/: CartridgeDetailBasePage.cs  CartridgeDetailDescriptionView.cs  CartridgeDetailMapView.cs  CartridgeDetailPage.cs  CartridgeDetailViewModel.cs  CartridgeFolderSelectionPage.cs  CartridgeListCell.cs  CartridgeListPage.cs
WF.Player.Forms/Common/: BasePage.cs  BaseViewModel.cs  BottomBarPage.cs  CustomWebView.cs  DirectionBarPage.cs  Storage.cs  ToolBarPage.cs
WF.Player.Forms/Controls/: AccessoryCell.cs  BadgeImage.cs  DirectionArrow.cs  ExtendedButton.cs  ExtendedImage.cs  ExtendedLabel.cs  ExtendedMap.cs  ExtendedNavigationPage.cs  GameToolBarButton.cs  MapView.cs  MapViewModel.cs  PinchScrollView.cs  PullToRefreshListView.cs
WF.Player.Forms/Data/: DirectionInfo.cs  ObservableObject.cs
WF.Player.Forms/Enums/: DirectionState.cs  FormatCoordinates.cs  ImageResize.cs  MapOrientation.cs  MapSource.cs  OverviewType.cs  ScreenType.cs  UnitLength.cs
WF.Player.Forms/Game/: GameCheckLocationView.cs  GameCheckLocationViewModel.cs  GameDetailView.cs  GameDetailViewModel.cs  GameInputView.cs  GameInputViewModel.cs  GameMainCellView.cs  GameMainCellViewModel.cs  GameMainView.cs  GameMainViewModel.cs  GameMessageboxView.cs  GameMessageboxViewModel.cs  GameModel.cs
WF.Player.Forms/Interfaces/: IFormsPlatformHelper.cs  IGeolocator.cs
WF.Player.Forms/Models/: CartridgeSavegame.cs  CartridgeStore.cs  CartridgeTag.cs  History.cs  HistoryEntry.cs  ICommonPlatformHelper.cs
WF.Player.Forms/Settings/: AboutPage.cs  CheckCell.cs  FolderSelectionPage.cs  MultiCell.cs  SelectionPage.cs  SettingsPage.cs
WF.Player.Forms/Utils/: ExtensionZonePoint.cs  ExtensionsImageAlignment.cs  ExtesionPosition.cs  ProgressAggregator.cs
WF.Player.UWP/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  WF.Player.UWP.csproj
WF.Player.UWP/Properties/: AssemblyInfo.cs
WF.Player.WinPhone/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  WF.Player.WinPhone.csproj  packages.config
WF.Player.WinPhone/Properties/: AssemblyInfo.cs
WF.Player.WinPhone/Renderer/: ExtendedLabelRenderer.cs
WF.Player.Windows/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  WF.Player.Windows.csproj
WF.Player.Windows/Properties/: AssemblyInfo.cs
WF.Player.iOS/: AppDelegate.cs  Info.plist  Main.cs  WF.Player.iOS.csproj  packages.config
WF.Player.iOS/Assets/: Wherigo Tutorial.gwc
WF.Player.iOS/Bootstrap/: BarCodeServiceBootstrap.cs  MobileBootstrap.cs  UserDialogsBootstrap.cs
WF.Player.iOS/Game/: ScreenMap.cs
WF.Player.iOS/Renderer/: AccessoryCellRenderer.cs  BadgeImageRenderer.cs  BottomBarPageRenderer.cs  CheckCellRenderer.cs  CustomButtonRenderer.cs  CustomNavigationPageRenderer.cs  CustomNavigationRenderer.cs  CustomWebViewRenderer.cs  DirectionArrowRenderer.cs  ExtendedLabelRenderer.cs  ExtendedMapRenderer.cs  ExtendedNavigationPageRenderer.cs  FormsUIRefreshControl.cs  GameInputViewRenderer.cs  GameToolBarButtonRenderer.cs  MultiCellRenderer.cs  PinchScrollViewRenderer.cs  PullToRefreshListViewRenderer.cs
WF.Player.iOS/Settings.bundle/: Acknowledge.plist  Display.plist  Localisation.plist  Root.plist
(+141 files in other folders)
